5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1592_1800.log
== SUBMITION (2019-04-01 15:18:05) 
-- CODE:
a = float(input("valor de a:"))
b = float(iput("valor de b"))
c = float(input("valor de c"))
r = ((a**2)+(b**2)(c**2))/a+b+c
print(round(r, 7))
-- EXECUTION TIME:
0.141426
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 2, in <module>
    b = float(iput("valor de b"))
NameError: name 'iput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:19:19) 
-- CODE:
a = float(input("valor de a:"))
b = float(iput("valor de b"))
c = float(input("valor de c"))
r = ((a**2)+(b**2)(c**2))/(a+b+c)
print(round(r, 7))
-- EXECUTION TIME:
0.167898
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 2, in <module>
    b = float(iput("valor de b"))
NameError: name 'iput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:19:20) 
-- CODE:
a = float(input("valor de a:"))
b = float(iput("valor de b"))
c = float(input("valor de c"))
r = ((a**2)+(b**2)(c**2))/(a+b+c)
print(round(r, 7))
-- EXECUTION TIME:
0.221104
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 2, in <module>
    b = float(iput("valor de b"))
NameError: name 'iput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:21) 
-- CODE:
a = float(input("valor de a:"))
b = float(iput("valor de b"))
c = float(input("valor de c"))
r = ((a**2)+(b**2)(c**2))/(a+b+c)
print(round(r, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = float(iput("valor de b"))
NameError: name 'iput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:19:23) 
-- CODE:
a = float(input("valor de a:"))
b = float(iput("valor de b"))
c = float(input("valor de c"))
r = ((a**2)+(b**2)(c**2))/(a+b+c)
print(round(r, 7))
-- EXECUTION TIME:
0.142661
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 2, in <module>
    b = float(iput("valor de b"))
NameError: name 'iput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:19:33) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b"))
c = float(input("valor de c"))
r = ((a**2)+(b**2)(c**2))/(a+b+c)
print(round(r, 7))
-- EXECUTION TIME:
0.156706
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 4, in <module>
    r = ((a**2)+(b**2)(c**2))/(a+b+c)
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:19:35) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b"))
c = float(input("valor de c"))
r = ((a**2)+(b**2)(c**2))/(a+b+c)
print(round(r, 7))
-- EXECUTION TIME:
0.201346
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 4, in <module>
    r = ((a**2)+(b**2)(c**2))/(a+b+c)
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:35) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b"))
c = float(input("valor de c"))
r = ((a**2)+(b**2)(c**2))/(a+b+c)
print(round(r, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    r = ((a**2)+(b**2)(c**2))/(a+b+c)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:19:37) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b"))
c = float(input("valor de c"))
r = ((a**2)+(b**2)(c**2))/(a+b+c)
print(round(r, 7))
-- EXECUTION TIME:
0.174383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 4, in <module>
    r = ((a**2)+(b**2)(c**2))/(a+b+c)
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:37) 
-- CODE:
a = float(input("valor de a:"))
b = float(input("valor de b"))
c = float(input("valor de c"))
r = ((a**2)+(b**2)(c**2))/(a+b+c)
print(round(r, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    r = ((a**2)+(b**2)(c**2))/(a+b+c)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
